test/tests/stages/8_loops/invalid_semantics/extra_credit/switch_continue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  switch
  (
  identifier(a)
  +
  const int(1)
  )
  {
  case
  const int(0)
  :
  identifier(a)
  =
  const int(4)
  ;
  continue
  ;
  default
  :
  identifier(a)
  =
  const int(1)
  ;
  }
  return
  identifier(a)
  ;
  }
